# pomerium

./: .clang-format  .codecov.yml  .dockerignore  .firebaserc  .fossa.yml  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  .tool-versions  .travis.yml  3RD-PARTY  AGENTS.md  AI_POLICY.md  BUILD  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG.MD  Dockerfile  Dockerfile.arm32v6  Dockerfile.arm32v7  Dockerfile.arm64v8  Dockerfile.debug  LICENSE  Makefile  PLAN.md  README.md  RELEASING.md  SECURITY.md  VERSION  WORKSPACE  changelog.out  config-policy-only.yaml  config.example.env  config.example.policy.only.yaml  config.example.yaml  deps.bzl  docker-compose.yml  env.example  (+14 more)
authenticate/: BUILD.bazel  authenticate.go  authenticate_test.go  config.go  csrf.go  csrf_test.go  events.go  grpc.go  grpc_test.go  handlers.go  handlers_callback_test.go  handlers_sign_out.go  handlers_test.go  handlers_verify.go  handlers_verify_test.go  identity.go  identity_profile.go  middleware.go  middleware_test.go  pkce.go  pkce_test.go  state.go  url.go  url_test.go
authenticate/circuit/: breaker.go  breaker_test.go
authenticate/events/: events.go
authenticate/handlers/: device-enrolled.go  handlers.go  userinfo.go
authenticate/providers/: doc.go  gitlab.go  google.go  microsoft.go  mock_provider.go  oidc.go  okta.go  onelogin.go  providers.go  singleflight_middleware.go  test_provider.go
authorize/: BUILD.bazel  README.md  access_tracker.go  access_tracker_test.go  authorize.go  authorize_int_test.go  authorize_test.go  cache_warmer.go  cache_warmer_test.go  check_response.go  check_response_grpc.go  check_response_test.go  config_change_test.go  cookie_bearer_regression_test.go  cookie_bearer_test.go  databroker.go  databroker_test.go  engine_builder.go  errors.go  evaluate.go  evaluate_test.go  google_cloud_serverless.go  google_cloud_serverless_test.go  gprc.go  gprc_test.go  grpc.go  grpc_bench_test.go  grpc_differential_test.go  grpc_mcp_session_version_test.go  grpc_mcp_test.go  grpc_test.go  identity.go  identity_test.go  jwt_bearer_int_test.go  jwt_bearer_k3s_int_test.go  log.go  log_test.go  log_test.go.bak  postgres.go  postgres_test.go  (+13 more)
authorize/checkrequest/: checkrequest.go  checkrequest_test.go
authorize/evaluator/: BUILD.bazel  config.go  custom.go  custom_test.go  evaluator.go  evaluator_bench_test.go  evaluator_export_test.go  evaluator_test.go  functions.go  functions_test.go  gen-test-certs.go  gen.go  google_cloud_serverless.go  google_cloud_serverless_test.go  headers_evaluator.go  headers_evaluator_evaluation.go  headers_evaluator_test.go  log.go  log_test.go  mcp.go  opa_test.go  policy_evaluator.go  policy_evaluator_test.go  rego_compiler.go  rego_compiler_test.go  request.go  result.go  secrets_headers_test.go  store.go  store_test.go
authorize/policy/: files.go  policy.go  policy_test.go
cmd/pomerium/: BUILD.bazel  main.go  main_test.go  options.go  options_test.go
config/: BUILD.bazel  autocert.go  autocert_test.go  bearer_token_format.go  certs.go  certs_test.go  circuit_breaker_thresholds.go  codec_type.go  codec_type_test.go  config.gen.go  config.go  config_int_test.go  config_source.go  config_source_test.go  config_test.go  constants.go  crypt.go  custom.go  custom_test.go  dns.go  doc.go  from.go  from_test.go  gen.go  helpers.go  helpers_test.go  http.go  http_test.go  identity.go  identity_benchmark_test.go  identity_provider.go  identity_provider_kubernetes.go  identity_provider_kubernetes_test.go  identity_provider_resolver_test.go  identity_provider_review_test.go  identity_provider_roundtrip_test.go  identity_provider_test.go  identity_test.go  internal_mcp.go  jwt_idp.go  (+39 more)
config/diff/: config_differ.go  config_differ_test.go
config/envoyconfig/: BUILD.bazel  acmetlsalpn.go  acmetlsalpn_test.go  bootstrap.go  bootstrap_test.go  builder.go  circuit_breakers.go  clusters.go  clusters_envoy_admin.go  clusters_proto.go  clusters_test.go  dyn_extensions.go  envoyconfig.go  filters.go  grpc_max_connections_test.go  grpc_stream_counter_test.go  http_connection_manager.go  http_connection_manager_test.go  listeners.go  listeners_debug.go  listeners_envoy_admin.go  listeners_grpc.go  listeners_main.go  listeners_main_test.go  listeners_metrics.go  listeners_ssh.go  listeners_ssh_test.go  listeners_test.go  local_reply.go  local_reply_test.go  lua.go  lua_test.go  main_test.go  matchers.go  outbound.go  outbound_test.go  per_filter_config.go  pipe.go  pipe_test.go  protocols.go  (+26 more)
config/otelconfig/: otelconfig.go
config/testdata/: basic.json  basic.yaml  kubeserviceaccount.token
databroker/: BUILD.bazel  cache.go  cache_test.go  config.go  connect.go  databroker.go  databroker_test.go  directory.go  server.go  server_databroker.go  server_registry.go  server_test.go
examples/mutual-tls/: BUILD.bazel  Dockerfile  README.md  docker-compose.yaml  example.config.yaml  main.go
integration/: BUILD.bazel  README.md  authentication_test.go  authorization_test.go  benchmark_test.go  control_plane_test.go  cors_test.go  dashboard_test.go  forward_auth_test.go  main_test.go  policy_test.go  stats.go  websocket_test.go
integration/flows/: BUILD.bazel  flows.go
integration/forms/: BUILD.bazel  forms.go
integration/manifests/: manifests.jsonnet
integration/tpl/: utils.libsonnet
internal/atomicutil/: BUILD.bazel  value.go  value_test.go
internal/autocert/: BUILD.bazel  certmagic_logger.go  certmagic_logger_test.go  locker.go  manager.go  ocsp.go  (+8 more)
proxy/: BUILD.bazel  data.go  data_test.go  forward_auth.go  forward_auth_test.go  grpc.go  grpc_test.go  handlers.go  handlers_portal.go  handlers_portal_test.go  handlers_sign_out.go  handlers_test.go  identity_profile.go  match.go  middleware.go  middleware_test.go  postgres_session_binding.go  postgres_session_binding_test.go  proxy.go  proxy_test.go  state.go
ui/: .eslintrc  .oxfmtrc.json  .oxlintrc.json  BUILD.bazel  embed.go  embed_ext.go  embed_local.go  eslint.config.mjs  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+3158 files in other folders)
