load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authenticate",
    srcs = [
        "authenticate.go",
        "config.go",
        "handlers.go",
        "identity.go",
        "identity_profile.go",
        "middleware.go",
        "state.go",
    ],
    importpath = "github.com/pomerium/pomerium/authenticate",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//internal/atomicutil",
        "//internal/encoding",
        "//internal/encoding/jws",
        "//internal/handlers",
        "//internal/httputil",
        "//internal/identity",
        "//internal/identity/oauth",
        "//internal/identity/oauth/apple",
        "//internal/identity/oidc",
        "//internal/log",
        "//internal/middleware",
        "//internal/sessions",
        "//internal/sessions/cookie",
        "//internal/telemetry/trace",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "//pkg/grpc/identity",
        "//pkg/hpke",
        "@com_github_go_jose_go_jose_v3//:go-jose",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_pomerium_csrf//:csrf",
        "@com_github_rs_cors//:cors",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "authenticate_test",
    srcs = [
        "authenticate_test.go",
        "handlers_test.go",
    ],
    embed = [":authenticate"],
    deps = [
        "//config",
        "//internal/atomicutil",
        "//internal/encoding/jws",
        "//internal/encoding/mock",
        "//internal/httputil",
        "//internal/identity",
        "//internal/identity/oidc",
        "//internal/sessions",
        "//internal/sessions/mock",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "//pkg/grpc/databroker",
        "@com_github_go_jose_go_jose_v3//jwt",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_crypto//chacha20poly1305",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
