load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authorize",
    srcs = [
        "access_tracker.go",
        "authorize.go",
        "check_response.go",
        "databroker.go",
        "grpc.go",
        "log.go",
        "state.go",
    ],
    importpath = "github.com/pomerium/pomerium/authorize",
    visibility = ["//visibility:public"],
    deps = [
        "//authorize/evaluator",
        "//authorize/internal/store",
        "//config",
        "//internal/atomicutil",
        "//internal/httputil",
        "//internal/log",
        "//internal/sessions",
        "//internal/sets",
        "//internal/telemetry/metrics",
        "//internal/telemetry/requestid",
        "//internal/telemetry/trace",
        "//internal/urlutil",
        "//pkg/contextutil",
        "//pkg/cryptutil",
        "//pkg/grpc",
        "//pkg/grpc/audit",
        "//pkg/grpc/databroker",
        "//pkg/grpc/session",
        "//pkg/grpc/user",
        "//pkg/grpcutil",
        "//pkg/hpke",
        "//pkg/policy/criteria",
        "//pkg/protoutil",
        "//pkg/storage",
        "//pkg/webauthnutil",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:auth",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:type",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_tniswong_go_rfcx//rfc7231",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "authorize_test",
    srcs = [
        "access_tracker_test.go",
        "authorize_test.go",
        "check_response_test.go",
        "databroker_test.go",
        "grpc_test.go",
    ],
    embed = [":authorize"],
    deps = [
        "//authorize/evaluator",
        "//authorize/internal/store",
        "//config",
        "//internal/atomicutil",
        "//internal/sessions",
        "//internal/testutil",
        "//pkg/grpc/databroker",
        "//pkg/grpc/session",
        "//pkg/grpc/user",
        "//pkg/grpcutil",
        "//pkg/hpke/handlers",
        "//pkg/policy/criteria",
        "//pkg/protoutil",
        "//pkg/storage",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:auth",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:type",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
