load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "autocert.go",
        "certs.go",
        "codec_type.go",
        "config.go",
        "config_source.go",
        "constants.go",
        "crypt.go",
        "custom.go",
        "doc.go",
        "helpers.go",
        "http.go",
        "identity.go",
        "layered.go",
        "log.go",
        "metrics.go",
        "options.go",
        "options_check.go",
        "policy.go",
        "policy_ppl.go",
        "session.go",
        "trace.go",
        "validate.go",
    ],
    importpath = "github.com/pomerium/pomerium/config",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/atomicutil",
        "//internal/encoding",
        "//internal/encoding/jws",
        "//internal/fileutil",
        "//internal/hashutil",
        "//internal/httputil",
        "//internal/identity",
        "//internal/identity/oauth",
        "//internal/log",
        "//internal/middleware",
        "//internal/sessions",
        "//internal/sessions/cookie",
        "//internal/sessions/header",
        "//internal/sessions/queryparam",
        "//internal/sets",
        "//internal/telemetry",
        "//internal/telemetry/metrics",
        "//internal/telemetry/trace",
        "//internal/tripper",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "//pkg/derivecert",
        "//pkg/grpc/config",
        "//pkg/grpc/crypt",
        "//pkg/grpc/identity",
        "//pkg/hpke",
        "//pkg/netutil",
        "//pkg/policy/parser",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/network/http_connection_manager/v3:http_connection_manager",
        "@com_github_google_uuid//:uuid",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_viper//:viper",
        "@com_github_volatiletech_null_v9//:null",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "autocert_test.go",
        "certs_test.go",
        "codec_type_test.go",
        "config_source_test.go",
        "config_test.go",
        "custom_test.go",
        "helpers_test.go",
        "http_test.go",
        "layered_test.go",
        "metrics_test.go",
        "options_test.go",
        "policy_ppl_test.go",
        "policy_test.go",
        "session_test.go",
        "trace_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":config"],
    deps = [
        "//internal/encoding/jws",
        "//internal/httputil",
        "//internal/sessions",
        "//internal/telemetry/trace",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "//pkg/grpc/config",
        "//pkg/policy",
        "//pkg/policy/parser",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
    ],
)
