load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_test(
    name = "integration_test",
    srcs = [
        "authorization_test.go",
        "benchmark_test.go",
        "control_plane_test.go",
        "main_test.go",
        "policy_test.go",
        "stats.go",
    ],
    deps = [
        "//integration/flows",
        "@com_github_docker_docker//api/types",
        "@com_github_docker_docker//client",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_net//publicsuffix",
    ],
)
