load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proxy",
    srcs = [
        "data.go",
        "handlers.go",
        "identity_profile.go",
        "proxy.go",
        "state.go",
    ],
    importpath = "github.com/pomerium/pomerium/proxy",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//internal/atomicutil",
        "//internal/encoding",
        "//internal/encoding/jws",
        "//internal/handlers",
        "//internal/handlers/webauthn",
        "//internal/httputil",
        "//internal/identity",
        "//internal/identity/manager",
        "//internal/log",
        "//internal/middleware",
        "//internal/sessions",
        "//internal/sessions/cookie",
        "//internal/telemetry/metrics",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "//pkg/grpc",
        "//pkg/grpc/databroker",
        "//pkg/grpc/identity",
        "//pkg/grpc/session",
        "//pkg/grpc/user",
        "//pkg/hpke",
        "//pkg/webauthnutil",
        "@com_github_go_jose_go_jose_v3//jwt",
        "@com_github_gorilla_mux//:mux",
        "@com_github_pomerium_csrf//:csrf",
        "@com_github_pomerium_datasource//pkg/directory",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "proxy_test",
    srcs = [
        "handlers_test.go",
        "proxy_test.go",
    ],
    embed = [":proxy"],
    deps = [
        "//config",
        "//internal/atomicutil",
        "//internal/httputil",
        "//internal/urlutil",
        "//pkg/hpke/handlers",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
