load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "evaluator",
    srcs = [
        "config.go",
        "evaluator.go",
        "functions.go",
        "google_cloud_serverless.go",
        "headers_evaluator.go",
        "policy_evaluator.go",
    ],
    importpath = "github.com/pomerium/pomerium/authorize/evaluator",
    visibility = ["//visibility:public"],
    deps = [
        "//authorize/evaluator/opa",
        "//authorize/internal/store",
        "//config",
        "//internal/httputil",
        "//internal/log",
        "//internal/telemetry/trace",
        "//internal/urlutil",
        "//pkg/contextutil",
        "//pkg/cryptutil",
        "//pkg/grpc/config",
        "//pkg/policy",
        "//pkg/policy/criteria",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_go_jose_go_jose_v3//:go-jose",
        "@com_github_hashicorp_golang_lru_v2//:golang-lru",
        "@com_github_open_policy_agent_opa//ast",
        "@com_github_open_policy_agent_opa//rego",
        "@com_github_open_policy_agent_opa//types",
        "@io_opencensus_go//trace",
        "@org_golang_google_api//idtoken",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//singleflight",
    ],
)

go_test(
    name = "evaluator_test",
    srcs = [
        "evaluator_test.go",
        "functions_test.go",
        "google_cloud_serverless_test.go",
        "headers_evaluator_test.go",
        "policy_evaluator_test.go",
    ],
    embed = [":evaluator"],
    deps = [
        "//authorize/internal/store",
        "//config",
        "//internal/httputil",
        "//pkg/contextutil",
        "//pkg/cryptutil",
        "//pkg/grpc/session",
        "//pkg/grpc/user",
        "//pkg/policy",
        "//pkg/policy/criteria",
        "//pkg/policy/parser",
        "//pkg/storage",
        "@com_github_go_jose_go_jose_v3//jwt",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
