load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pomerium_lib",
    srcs = ["main.go"],
    importpath = "github.com/pomerium/pomerium/cmd/pomerium",
    visibility = ["//visibility:private"],
    deps = [
        "//config",
        "//internal/log",
        "//internal/version",
        "//pkg/cmd/pomerium",
        "//pkg/envoy/files",
        "@com_github_rs_zerolog//:zerolog",
    ],
)

go_binary(
    name = "pomerium",
    embed = [":pomerium_lib"],
    visibility = ["//visibility:public"],
)
