load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "envoyconfig",
    srcs = [
        "acmetlsalpn.go",
        "bootstrap.go",
        "builder.go",
        "clusters.go",
        "clusters_envoy_admin.go",
        "envoyconfig.go",
        "filters.go",
        "http_connection_manager.go",
        "listeners.go",
        "listeners_envoy_admin.go",
        "lua.go",
        "outbound.go",
        "protocols.go",
        "routes.go",
        "tls.go",
        "tracing.go",
    ],
    embedsrcs = [
        "luascripts/clean-upstream.lua",
        "luascripts/ext-authz-set-cookie.lua",
        "luascripts/remove-impersonate-headers.lua",
        "luascripts/rewrite-headers.lua",
    ],
    importpath = "github.com/pomerium/pomerium/config/envoyconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//config/envoyconfig/filemgr",
        "//internal/fileutil",
        "//internal/hashutil",
        "//internal/httputil",
        "//internal/httputil/reproxy",
        "//internal/log",
        "//internal/sets",
        "//internal/telemetry",
        "//internal/telemetry/metrics",
        "//internal/telemetry/trace",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "//pkg/protoutil",
        "@com_github_envoyproxy_go_control_plane//envoy/config/accesslog/v3:accesslog",
        "@com_github_envoyproxy_go_control_plane//envoy/config/bootstrap/v3:bootstrap",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/config/listener/v3:listener",
        "@com_github_envoyproxy_go_control_plane//envoy/config/metrics/v3:metrics",
        "@com_github_envoyproxy_go_control_plane//envoy/config/route/v3:route",
        "@com_github_envoyproxy_go_control_plane//envoy/config/trace/v3:trace",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/access_loggers/file/v3:file",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/access_loggers/grpc/v3:grpc",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/ext_authz/v3:ext_authz",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/lua/v3:lua",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/router/v3:router",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/listener/proxy_protocol/v3:proxy_protocol",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/listener/tls_inspector/v3:tls_inspector",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/network/http_connection_manager/v3:http_connection_manager",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/network/tcp_proxy/v3:tcp_proxy",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/http/header_formatters/preserve_case/v3:preserve_case",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/transport_sockets/tls/v3:tls",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/upstreams/http/v3:http",
        "@com_github_envoyproxy_go_control_plane//envoy/type/matcher/v3:matcher",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:type",
        "@com_github_martinlindhe_base36//:base36",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_x_net//nettest",
    ],
)

go_test(
    name = "envoyconfig_test",
    srcs = [
        "acmetlsalpn_test.go",
        "bootstrap_test.go",
        "clusters_test.go",
        "listeners_test.go",
        "lua_test.go",
        "outbound_test.go",
        "protocols_test.go",
        "routes_test.go",
        "tls_test.go",
        "tracing_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":envoyconfig"],
    embedsrcs = [
        "testdata/main_http_connection_manager_filter.json",
        "testdata/metrics_http_connection_manager.json",
    ],
    deps = [
        "//config",
        "//config/envoyconfig/filemgr",
        "//internal/testutil",
        "//internal/urlutil",
        "//pkg/cryptutil",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/config/route/v3:route",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/http/header_formatters/preserve_case/v3:preserve_case",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/upstreams/http/v3:http",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_volatiletech_null_v9//:null",
        "@com_github_yuin_gopher_lua//:gopher-lua",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
