load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "flows",
    srcs = ["flows.go"],
    importpath = "github.com/pomerium/pomerium/integration/flows",
    visibility = ["//visibility:public"],
    deps = [
        "//integration/forms",
        "//internal/urlutil",
    ],
)
