load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controlplane",
    srcs = [
        "events.go",
        "grpc_accesslog.go",
        "http.go",
        "server.go",
        "xds.go",
    ],
    importpath = "github.com/pomerium/pomerium/internal/controlplane",
    visibility = ["//:__subpackages__"],
    deps = [
        "//config",
        "//config/envoyconfig",
        "//config/envoyconfig/filemgr",
        "//internal/atomicutil",
        "//internal/controlplane/xdsmgr",
        "//internal/events",
        "//internal/handlers",
        "//internal/httputil/reproxy",
        "//internal/log",
        "//internal/middleware",
        "//internal/telemetry",
        "//internal/telemetry/requestid",
        "//internal/urlutil",
        "//internal/version",
        "//pkg/cryptutil",
        "//pkg/envoy/files",
        "//pkg/grpc",
        "//pkg/grpc/databroker",
        "//pkg/grpcutil",
        "//pkg/hpke/handlers",
        "//pkg/protoutil",
        "@com_github_cafxx_httpcompression//:httpcompression",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_envoyproxy_go_control_plane//envoy/service/accesslog/v3:accesslog",
        "@com_github_envoyproxy_go_control_plane//envoy/service/discovery/v3:discovery",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "controlplane_test",
    srcs = [
        "events_test.go",
        "server_test.go",
    ],
    embed = [":controlplane"],
    deps = [
        "//config",
        "//internal/atomicutil",
        "//internal/events",
        "//pkg/cryptutil",
        "//pkg/grpc/databroker",
        "//pkg/grpc/events",
        "//pkg/netutil",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
    ],
)
