load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "databroker",
    srcs = [
        "config.go",
        "config_source.go",
        "registry.go",
        "server.go",
    ],
    importpath = "github.com/pomerium/pomerium/internal/databroker",
    visibility = ["//:__subpackages__"],
    deps = [
        "//config",
        "//internal/hashutil",
        "//internal/log",
        "//internal/registry",
        "//internal/registry/inmemory",
        "//internal/registry/redis",
        "//internal/telemetry/metrics",
        "//internal/telemetry/trace",
        "//pkg/cryptutil",
        "//pkg/grpc",
        "//pkg/grpc/config",
        "//pkg/grpc/databroker",
        "//pkg/grpc/registry",
        "//pkg/grpcutil",
        "//pkg/storage",
        "//pkg/storage/inmemory",
        "//pkg/storage/postgres",
        "//pkg/storage/redis",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "databroker_test",
    srcs = [
        "config_source_test.go",
        "server_test.go",
    ],
    embed = [":databroker"],
    deps = [
        "//config",
        "//internal/testutil",
        "//pkg/cryptutil",
        "//pkg/grpc/config",
        "//pkg/grpc/databroker",
        "//pkg/grpc/session",
        "//pkg/protoutil",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)
