load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "encoding",
    srcs = [
        "base64.go",
        "econding.go",
    ],
    importpath = "github.com/pomerium/pomerium/internal/encoding",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "encoding_test",
    srcs = ["base64_test.go"],
    embed = [":encoding"],
    deps = ["@com_github_stretchr_testify//assert"],
)
