load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "events",
    srcs = [
        "events.go",
        "manager.go",
    ],
    importpath = "github.com/pomerium/pomerium/internal/events",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/log",
        "//pkg/grpc/events",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "events_test",
    srcs = ["manager_test.go"],
    embed = [":events"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
